--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -2,3 +2,14 @@
  * 全局样式
  */
 
+@import './icon.less';
+
+.app-nav-bar {
+	background-color: #3296fa !important;
+	.van-icon {
+		color: #fff !important;
+	}
+	.van-nav-bar__title {
+		color: #fff;
+	}
+}
