--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -4,10 +4,14 @@
 
 @import './icon.less';
 
+body {
+	background-color: #f5f7f9;
+}
+
 .app-nav-bar {
-	background-color: #3296fa !important;
+	background-color: #3296fa;
 	.van-icon {
-		color: #fff !important;
+		color: #fff;
 	}
 	.van-nav-bar__title {
 		color: #fff;
